Fixed that super frustrating font issue, of the custom fonts not showing up on the canvas...sometimes!?

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
     background-color: yellow;
 }
 
-body canvas {
+canvas {
     display:block;
     margin:5vh auto 10px auto;
     border:5px solid blue;
